@@ -56,7 +56,7 @@ $expressionFormList->addRow(_('Item'), $item);
 
 // append function to form list
 $functionComboBox = new CComboBox('expr_type', $this->data['expr_type'], 'submit()');
-$functionComboBox->addStyle('width: 373px;');
+$functionComboBox->addStyle('width: 605px;');
 foreach ($this->data['functions'] as $id => $f) {
 	// if user has selected an item, we are filtering out the triggers that can't work with it
 	if (empty($this->data['itemValueType']) || !empty($f['allowed_types'][$this->data['itemValueType']])) {
@@ -70,7 +70,7 @@ if (isset($this->data['functions'][$this->data['function'].'['.$this->data['oper
 		$paramValue = isset($this->data['param'][$pid]) ? $this->data['param'][$pid] : null;
 
 		if ($pf['T'] == T_ZBX_INT) {
-			if ($pid == 0) {
+			if ($pid == 0 || $pid == 1) {
 				if (isset($pf['M'])) {
 					if (is_array($pf['M'])) {
 						$paramTypeElement = new CComboBox('paramtype', $this->data['paramtype']);
@@ -94,9 +94,6 @@ if (isset($this->data['functions'][$this->data['function'].'['.$this->data['oper
 					$expressionForm->addVar('paramtype', PARAM_TYPE_SECONDS);
 					$paramTypeElement = SPACE._('Seconds');
 				}
-			}
-			elseif ($pid == 1) {
-				$paramTypeElement = SPACE._('Seconds');
 			}
 			else {
 				$paramTypeElement = null;
