@@ -55,11 +55,23 @@
 </script>
 <?php
 if (!empty($this->data['insert'])) {
+	if ($this->data['function'] == 'count' && !empty($this->data['param']['2'])) {
+		$this->data['param']['2'] = '"'.$this->data['param']['2'].'"';
+	}
+	if (($this->data['function'] == 'regexp'
+		|| $this->data['function'] == 'iregexp'
+		|| $this->data['function'] == 'str')
+		&& $this->data['paramtype'] == PARAM_TYPE_COUNTS) {
+		$this->data['param']['1'] = '#'.$this->data['param']['1'];
+	}
 	$expression = sprintf('{%s:%s.%s(%s%s)}%s%s',
 		$this->data['item_host'],
 		$this->data['item_key'],
 		$this->data['function'],
-		$this->data['paramtype'] == PARAM_TYPE_COUNTS ? '#' : '',
+		($this->data['paramtype'] == PARAM_TYPE_COUNTS
+			&& $this->data['function'] != 'regexp'
+			&& $this->data['function'] != 'iregexp'
+			&& $this->data['function'] != 'str') ? '#' : '',
 		rtrim(implode(',', $this->data['param']), ','),
 		$this->data['operator'],
 		$this->data['value']
